# DH-International-2024

./: .gitignore  README.md  http_service.py  makefile  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
doc/: api.md
domain/: __init__.py  models.py
local/: test.json
neural-service-py/: neural_processing.py
neural_service_py/: 11x.pt  14best.pt  best_23_54.pt  neural_processing.py
report-block/: __init__.py  pyproject.toml  report_block.py
report-service/: api_utils.py  db_utils.py  http_service.py  models.py  neural_service_impl.py  report_service.py
report_block/: README.md  __init__.py  pyproject.toml
report_service/: api_utils.py  db_utils.py  http_service.py  neural-subscriber.py  neural_service_impl.py  report_service.py
web-view/: next.config.ts  package-lock.json  package.json  tsconfig.json
web-view/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
web-view/.next/cache/: .rscinfo  .tsbuildinfo
web-view/.next/cache/eslint/: .cache_1nj0wio
web-view/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
web-view/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  (+1 more)
web-view/src/app/: globals.css  page.tsx
weednw/NNservice/: main.cpp  neuro.py  resnetclass.py  scrpt.py  split.py  ssl.cpp  train.py  train.yaml  yolo.cpp
(+37 files in other folders)
